MPICH2 1.3.2 Adjusted mpicc to compile properly with hdtrace.

--- a/MPICH2/cur/src/env/mpif77.in
+++ b/MPICH2/cur/src/env/mpif77.in
@@ -332,7 +332,7 @@ if [ "$linking" = yes ] ; then
         $Show $F77 $FFLAGS $LDFLAGS $allargs -I$includedir
         rc=$?
     else
-        $Show $F77 $FFLAGS $LDFLAGS $allargs -I$includedir ${path_list} $mpilibs $LIBS
+        $Show $F77 $FFLAGS $LDFLAGS $allargs -I$includedir ${path_list} $mpilibs $LIBS $mpilibs
         rc=$?
     fi
 else
