--- a/MPICH2/cur/src/env/mpicc.bash.in
+++ b/MPICH2/cur/src/env/mpicc.bash.in
@@ -262,7 +262,7 @@ if [ "$linking" = yes ] ; then
         $Show $CC $CPPFLAGS $CFLAGS $LDFLAGS "${allargs[@]}" -I$includedir
         rc=$?
     else
-        $Show $CC $CPPFLAGS $CFLAGS $LDFLAGS "${allargs[@]}" -I$includedir ${path_list} $mpilibs $LIBS
+        $Show $CC $CPPFLAGS $CFLAGS $LDFLAGS "${allargs[@]}" -I$includedir ${path_list} $mpilibs $LIBS $mpilibs
         rc=$?
     fi
 else
