Added the ability to read *.trc files.

--- a/HDReplay/src/Makefile
+++ b/HDReplay/src/Makefile
@@ -6,14 +6,14 @@ LIBS = -L /home/weging/bin/lib -l expat -l glib-2.0
 
 INCLUDE = -I /usr/include/glib-2.0 -I /usr/lib/glib-2.0/include -I /home/weging/bin/include 
 
-OBJS = main.o init.o error.o readproject.o
+OBJS = main.o init.o error.o readproject.o readtrace.o
 
 .c.o: Makefile
 	$(CC) -c $(INCLUDE) $(CFLAGS)
 
-all: simulation Makefile
+all: hdreplay Makefile
 
-simulation: $(OBJS) 
+hdreplay: $(OBJS) 
 	$(CC) $(LIBS) -o $@ $(OBJS) $(CFLAGS)
 
 main.o: Makefile
@@ -34,4 +34,4 @@ init.o: Makefile
 
 clean:
 	rm -rf *.o
-	rm -f simulation
+	rm -f hdreplay
