--- a/PVFS2/orangefs-2.8.3-20101113/configure.in
+++ b/PVFS2/orangefs-2.8.3-20101113/configure.in
@@ -494,6 +494,50 @@ AC_ARG_WITH(tau,
 AC_SUBST(TAU_INCS)
 AC_SUBST(BUILD_TAU)
 
+
+
+BUILD_HDTRACE=
+dnl use the hdtrace library
+AC_ARG_WITH(hdtrace,
+[  --with-hdtrace=path         Use HDTrace library installed in "path"],
+    if test "x$withval" = "xyes" ; then
+           AC_MSG_ERROR(--with-hdtrace must be given a pathname)
+    else
+       CFLAGS="$CFLAGS -I$withval/include $(pkg-config --cflags glib-2.0)"
+       LDFLAGS="$LDFLAGS -L$withval/lib $(pkg-config --cflags glib-2.0)"
+       LIBS="$LIBS -lhdStats -lhdTrace -lhdRelation $(pkg-config --libs glib-2.0)"
+       AC_DEFINE(HAVE_HDTRACE, 1, [Define if HDTrace library is used])
+       BUILD_HDTRACE=1
+       
+       AC_TRY_LINK([#include "hdTopo.h"], [  ],
+       ,
+       AC_MSG_ERROR(hdtrace library is not usable))
+    fi
+)
+
+AC_SUBST(BUILD_HDTRACE)
+
+BUILD_HDTRACEPTL=
+dnl use the hdtrace library and Performance Trace of the kernel
+AC_ARG_WITH(hdrut,
+[  --with-hdrut=path         Use Ressource Utilization Tracing installed in "path"],
+    if test "x$withval" = "xyes" ; then
+           AC_MSG_ERROR(--with-hdrut must be given a pathname)
+    else
+       CFLAGS="$CFLAGS -I$withval/include -I$withval/src  $(pkg-config --cflags gthread-2.0) $(pkg-config --cflags libgtop-2.0)"
+       LDFLAGS="$LDFLAGS -L$withval/lib -L/usr/lib"
+       LIBS="-lRUT $LIBS $(pkg-config --libs gthread-2.0) $(pkg-config --libs libgtop-2.0)"
+       AC_DEFINE(HAVE_HDPTL, 1, [Define if HDRut library is used])
+       BUILD_HDTRACEPTL=1
+       
+       AC_TRY_LINK([#include "RUT.h"], [  ],
+       ,
+       AC_MSG_ERROR(RUT library is not usable))
+    fi
+)
+
+AC_SUBST(BUILD_HDTRACEPTL)
+
 BUILD_KERNEL=
 
 dnl
@@ -1209,6 +1253,21 @@ if test "x$LINUX_KERNEL_SRC" = "x" -a "x$BUILD_BMI_ONLY" != "x1"; then
    AC_MSG_RESULT([PVFS2 configured for the 2.6.x kernel module      :  no])
 else
    AC_MSG_RESULT([PVFS2 configured for the 2.6.x kernel module      : yes])
+fi
+
+if test "x$BUILD_HDTRACE" = "x" ; then
+   AC_MSG_RESULT([PVFS2 configured for hdtrace module               :  no])
+else
+   AC_MSG_RESULT([PVFS2 configured for hdtrace module               : yes])
+fi
+
+if test "x$BUILD_HDTRACEPTL" = "x" ; then
+   AC_MSG_RESULT([configured to use PTL together with hdtrace module:  no])
+else
+   AC_MSG_RESULT([configured to use PTL together with hdtrace module: yes])
+   if test "x$BUILD_HDTRACE" = "x" ; then
+   	AC_MSG_ERROR(Error hdtrace module is required for PTL)
+   fi
 fi
 
 if test "x$LINUX24_KERNEL_SRC" = "x" -a "x$BUILD_BMI_ONLY" != "x1"; then
