--- a/PVFS2/orangefs-2.8.3-20101113/pvfs2-config.h.in
+++ b/PVFS2/orangefs-2.8.3-20101113/pvfs2-config.h.in
@@ -1,5 +1,8 @@
 /* pvfs2-config.h.in.  Generated from configure.in by autoheader.  */
 
+/* Define if building universal (internal helper macro) */
+#undef AC_APPLE_UNIVERSAL_BUILD
+
 /* Define if berkeley db error reporting was enabled */
 #undef BERKDB_ERROR_REPORTING
 
@@ -136,6 +139,12 @@
 
 /* Define if strerror_r is GNU-specific */
 #undef HAVE_GNU_STRERROR_R
+
+/* Define if HDRut library is used */
+#undef HAVE_HDPTL
+
+/* Define if HDTrace library is used */
+#undef HAVE_HDTRACE
 
 /* Define if libibverbs has reregister event */
 #undef HAVE_IBV_EVENT_CLIENT_REREGISTER
@@ -481,6 +490,14 @@
 /* Define if openssl exists */
 #undef WITH_OPENSSL
 
-/* Define to 1 if your processor stores words with the most significant byte
-   first (like Motorola and SPARC, unlike Intel and VAX). */
-#undef WORDS_BIGENDIAN
+/* Define WORDS_BIGENDIAN to 1 if your processor stores words with the most
+   significant byte first (like Motorola and SPARC, unlike Intel). */
+#if defined AC_APPLE_UNIVERSAL_BUILD
+# if defined __BIG_ENDIAN__
+#  define WORDS_BIGENDIAN 1
+# endif
+#else
+# ifndef WORDS_BIGENDIAN
+#  undef WORDS_BIGENDIAN
+# endif
+#endif
