--- a/PVFS2/orangefs-2.8.3-20101113/pvfs2-config.h.in
+++ b/PVFS2/orangefs-2.8.3-20101113/pvfs2-config.h.in
@@ -251,9 +251,6 @@
 /* Define to 1 if you have the <mntent.h> header file. */
 #undef HAVE_MNTENT_H
 
-/* Define to 1 if you have the <mntent.h,> header file. */
-#undef HAVE_MNTENT_H_
-
 /* Define if mount.h contains MNT_NOATIME flags */
 #undef HAVE_MNT_NOATIME
 
@@ -454,9 +451,6 @@
 /* Define to the one symbol short name of this package. */
 #undef PACKAGE_TARNAME
 
-/* Define to the home page for this package. */
-#undef PACKAGE_URL
-
 /* Define to the version of this package. */
 #undef PACKAGE_VERSION
 
@@ -472,10 +466,10 @@
 /* sub version number */
 #undef PVFS2_VERSION_SUB
 
-/* The size of `long int', as computed by sizeof. */
+/* The size of a `long int', as computed by sizeof. */
 #undef SIZEOF_LONG_INT
 
-/* The size of `void *', as computed by sizeof. */
+/* The size of a `void *', as computed by sizeof. */
 #undef SIZEOF_VOID_P
 
 /* Define to 1 if you have the ANSI C header files. */
@@ -504,6 +498,6 @@
 # endif
 #else
 # ifndef WORDS_BIGENDIAN
-#  undef WORDS_BIGENDIAN
+#undef WORDS_BIGENDIAN
 # endif
 #endif
