Benchmark for memory-bandwidth.

--- a/PIOsimHD-Maint/benchmarks/Makefile
+++ b/PIOsimHD-Maint/benchmarks/Makefile
@@ -1,4 +1,7 @@
-all: mpi-bench mpi-bench1G
+all: mpi-bench mpi-bench1G memory-bandwidth
+
+memory-bandwidth: memory-bandwidth.c
+	mpicc -Wall memory-bandwidth.c -o memory-bandwidth -std=c99
 
 mpi-bench: mpi-bench.c
 	mpicc -Wall -std=c99 mpi-bench.c -o mpi-bench
