added stubs for cpuidle
added functions checking the availability of cpufreq and cpuidle---if not, set sources.CPU_FREQ_X and sources.CPU_IDLE_X to off. added stub returning a number fpr cpuidle-call. moved functions to new file for better modularibility.

--- a/ResourcesUtilizationTracingLibrary/lib/Makefile.am
+++ b/ResourcesUtilizationTracingLibrary/lib/Makefile.am
@@ -4,5 +4,5 @@ include $(top_srcdir)/common.am
 
 lib_LTLIBRARIES = libRUT.la
 
-libRUT_la_SOURCES = $(SRC_DIR)/RUT.c $(SRC_DIR)/tracing.c
+libRUT_la_SOURCES = $(SRC_DIR)/RUT.c $(SRC_DIR)/tracing.c $(SRC_DIR)/processorstates.c
 libRUT_la_CFLAGS = -I$(INC_DIR) $(GLIB_CFLAGS) $(GLIBTOP_CFLAGS) $(HDTWLIB_CFLAGS) -lcpufreq
