--- a/PIOsimHD-Maint/benchmarks/Makefile
+++ b/PIOsimHD-Maint/benchmarks/Makefile
@@ -1,4 +1,4 @@
-all: mpi-bench mpi-bench1G memory-bandwidth latency-bench
+all: io-test mpi-bench mpi-bench1G memory-bandwidth latency-bench
 
 memory-bandwidth: memory-bandwidth.c
 	mpicc -Wall memory-bandwidth.c -o memory-bandwidth -std=c99
@@ -12,6 +12,10 @@ latency-bench: latency-bench.c
 
 mpi-bench1G: mpi-bench.c
 	mpicc -Wall -std=c99 mpi-bench.c -o mpi-bench1G -DGByte
+
+io-test: io-test.c
+	gcc -Wall io-test.c -std=c99  -o io-test
+
 	
 clean:
 	rm mpi-bench1G mpi-bench
